--- a/_config.yml
+++ b/_config.yml
@@ -182,6 +182,9 @@ collections:
   publications:
     output: true
     permalink: /:collection/:path/
+  background:
+    output: true
+    permalink: /:collection/:path/
   portfolio:
     output: true
     permalink: /:collection/:path/
@@ -252,6 +255,15 @@ defaults:
       author_profile: true
       share: true
       comments: true
+  # _background
+  - scope:
+      path: ""
+      type: background
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true      
   # _portfolio
   - scope:
       path: ""
