--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 # Site Author
 author:
   name             : "Harish K. Dureppagari"
-  avatar           : "Harish_Photo.jpg"
+  avatar           : "Harish_Image.jpg"
   bio              : "Graduate Research Assistant, Wireless@VT"
   location         : "Blacksburg, VA"
   employer         : "Virginia Tech"
