--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
+  LinkedIn         : "https://www.linkedin.com/in/harish-kumar-d-91b821102/"
   orcid            : "https://orcid.org/0009-0007-4574-3579"
   pinterest        :
   soundcloud       :
