--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,6 +14,9 @@ main:
   - title: "Publications"
     url: /publications/
 
+  - title: "Research"
+    url: /research/
+
   # - title: "Overview"
   #   url: /overview/
     
