--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@ main:
   - title: "Academic Background"
     url: /background/
 
-  - title: "Experience"
+  - title: "Professional Experience"
     url: /experience/
     
   - title: "Publications"
