--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ analytics:
 author:
   name             : "Harish K. Dureppagari"
   avatar           : "Harish_Image.jpg"
-  bio              : "Graduate Research Assistant, Wireless@VT"
+  bio              : "Ph.D. Candidate, Wireless@VT"
   # location         : "Blacksburg, VA"
   employer         : "Virginia Tech"
   pubmed          : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
